--- a/index.html
+++ b/index.html
@@ -243,15 +243,23 @@
 <img src="./low_pass_applied.png" />
 </figure>
 </div>
-</section><section id="frequency-response" class="slide level2">
-<h2>Frequency Response</h2>
+</section><section id="frequency-response---numerical" class="slide level2">
+<h2>Frequency Response - Numerical</h2>
 <figure>
 <img src="./freq_response_low_pass.png" />
 </figure>
-</section><section id="frequency-response-1" class="slide level2">
-<h2>Frequency Response</h2>
+</section><section id="frequency-response---analytical" class="slide level2">
+<h2>Frequency Response - Analytical</h2>
 <figure>
 <img src="./freq_response_low_pass_analytical.png" />
+</figure>
+</section><section id="moving-average-low-pass-filter" class="slide level2">
+<h2>Moving Average Low Pass Filter</h2>
+<p><span class="math display">\displaystyle y_n = f_cx_n + (1-f_c)y_{n-1}</span></p>
+</section><section id="frequency-response---moving-average" class="slide level2">
+<h2>Frequency Response - Moving Average</h2>
+<figure>
+<img src="./freq_response_low_pass_recursive_analytical.png" />
 </figure>
 </section><section id="asdr" class="slide level2">
 <h2>ASDR</h2>
